5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1798_2571.log
== TEST (2019-06-10 14:29:13) 
-- CODE:
S = input("String: ")

v = ""
S = S.upper()
for i in range(len(S)):
	if (S[i] != "A"):
		v = v + S[i]
	elif (S[i] == "A"):
		v = v 
print(v)
		
		
-- OUTPUT:
INSTITUTO_DE_COMPUTCO-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:30:10) 
-- CODE:
S = input("String: ")

v = ""

for i in range(len(S)):
	if (S[i] != "A" or S[i] != "a"):
		v = v + S[i]
	elif (S[i] == "A" or S[i] == "a"):
		v = v 
print(v)
		
		
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:31:06) 
-- CODE:
S = input("String: ")

v = ""

for i in range(len(S)):
	if (S[i] != "A" or S[i] != "a"):
		v = v + S[i]
	elif (S[i] == "A" or S[i] == "a"):
		v = v 
print(v)
		
		
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:31:34) 
-- CODE:
S = input("String: ")

v = ""
S = S.upper()
for i in range(len(S)):
	if (S[i] != "A"):
		v = v + S[i]
	elif (S[i] == "A"):
		v = v 
print(v)
		
		
-- OUTPUT:
INSTITUTO_DE_COMPUTCO-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:32:50) 
-- CODE:
S = input("String: ")

v = ""
S = S
for i in range(len(S)):
	if (S[i] != "A"):
		v = v + S[i]
	elif (S[i] != "a"):
		v = v + S[i]
	elif (S[i] == "A"):
		v = v 
	elif (S[i] == "a"):
print(v)
		
		
-- ERROR:
File "XXXX", line 13
    print(v)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:32:57) 
-- CODE:
S = input("String: ")

v = ""
S = S
for i in range(len(S)):
	if (S[i] != "A"):
		v = v + S[i]
	elif (S[i] != "a"):
		v = v + S[i]
	elif (S[i] == "A"):
		v = v 
	elif (S[i] == "a"):
		v = v
print(v)
		
		
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:36:40) 
-- CODE:
S = input("String: ")

v = ""
for i in range(len(S)):
	if (S[i].upper() != "A"):
		v = v + S[i]
	elif (S[i].upper() == "A"):
		v = v 
print(v)
		
		
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:36:46) 
-- CODE:
S = input("String: ")

v = ""
for i in range(len(S)):
	if (S[i].upper() != "A"):
		v = v + S[i]
	elif (S[i].upper() == "A"):
		v = v 
print(v)
		
		
-- EXECUTION TIME:
0.615523
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
